[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/devtools/gclicommands.properties
+++ b/hy-AM/browser/chrome/browser/devtools/gclicommands.properties
@@ -138,6 +138,7 @@ screenshotCopied=Պատճենվել է սեղմատախտակին:\u0020
 # LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
 # the 'selector' parameter to the 'highlight' command, which is displayed in
 # a dialog when the user is using this command.
+highlightSelectorDesc=CSS ընտրիչ
 
 # LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
 # 'selector' parameter to the 'highlight' command, displayed when the user
@@ -145,6 +146,7 @@ screenshotCopied=Պատճենվել է սեղմատախտակին:\u0020
 
 # LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
 # the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=Կարգավորումներ
 
 # LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
 # the 'hideguides' option parameter to the 'highlight' command, which is
@@ -246,6 +248,7 @@ inspectManual=Հետազոտել տարրի չափերը և հատկությու
 # LOCALIZATION NOTE (inspectNodeDesc) A very short string to describe the
 # 'node' parameter to the 'inspect' command, which is displayed in a dialog
 # when the user is using this command.
+inspectNodeDesc=CSS ընտրիչ
 
 # LOCALIZATION NOTE (inspectNodeManual) A fuller description of the 'node'
 # parameter to the 'inspect' command, displayed when the user asks for help
@@ -263,6 +266,7 @@ eyedropperDesc=Ընտրեք մի գույն էջից
 
 # LOCALIZATION NOTE (eyedropperTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles the Eyedropper tool.
+eyedropperTooltip=Ընտրեք մի գույն էջից
 
 # LOCALIZATION NOTE (tiltDesc) A very short description of the 'tilt'
 # command. See tiltManual for a fuller description of what it does. This
@@ -661,6 +665,7 @@ cmdRefreshDesc=Վերակարդալ mozcmd շտեմարանը
 
 # LOCALIZATION NOTE (cmdStatus3) When the we load new commands from mozcmd
 # directory, we report where we loaded from using %1$S.
+cmdStatus3=Հրամանի ընթերցում %1$S-ից
 
 # LOCALIZATION NOTE (cmdSetdirDesc)  A very short description of the 'cmd setdir'
 # command. This string is designed to be shown in a menu alongside the command
@@ -1468,6 +1473,7 @@ mediaDesc=CSS մեդիա տեսակի մոդելավորում
 mediaEmulateDesc=Մոդելավորել որոշակի CSS մեդիա տեսակ
 mediaEmulateManual=Դիտել փաստաթուղթը, ինչպես որ այն ներկայացված է սարքում, որը աջակցում է տրված մեդիայի տեսակը՝ կիրառված համապատասխան CSS կանոնով:
 mediaEmulateType=Մոդելավորվող մեդիայի տեսակը
+mediaResetDesc=Դադարեցնել CSS մեդիա տեսակի մոդելավորումը               \u0020
 
 # LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
 # injectFailed) These strings describe the 'inject' commands and all available
@@ -1479,6 +1485,7 @@ mediaEmulateType=Մոդելավորվող մեդիայի տեսակը
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
+folderInvalidPath=Մուտքագրեք վավեր ճանապարհ
 
 # LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
 # describe the result of the 'folder open' command.
