--- a/hy-AM/browser/chrome/browser/devtools/inspector.properties
+++ b/hy-AM/browser/chrome/browser/devtools/inspector.properties
@@ -51,3 +51,4 @@ inspector.tooltip=DOM-ի և Ոճի տեսուչ
 previewTooltip.image.brokenImage=Հնարավոր չէ բացել նկարը
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=Բացել Վրիպազերծիչը
