--- a/hy-AM/browser/chrome/browser/devtools/toolbox.properties
+++ b/hy-AM/browser/chrome/browser/devtools/toolbox.properties
@@ -33,6 +33,7 @@ toolbox.titleTemplate=%1$S - %2$S
 
 # LOCALIZATION NOTE (toolbox.defaultTitle): This is used as the tool
 # name when no tool is selected.
+toolbox.defaultTitle=Ծրագրավորողի գործիքներ
 
 # LOCALIZATION NOTE (toolbox.label): This is used as the label for the
 # toolbox as a whole
