--- a/hy-AM/browser/chrome/browser/devtools/webconsole.properties
+++ b/hy-AM/browser/chrome/browser/devtools/webconsole.properties
@@ -245,3 +245,5 @@ messageRepeats.tooltip2=#1 կրկնել;#1 կրկնել
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.key=Բանալի
+table.value=Արժեքը
