--- a/hy-AM/browser/chrome/browser/devtools/webide.properties
+++ b/hy-AM/browser/chrome/browser/devtools/webide.properties
@@ -8,6 +8,7 @@ mainProcess_label=Հիմնական գործընթացը
 
 
 
+notification_showTroubleShooting_label=Խափանաշտկում
 
 # These messages appear in a notification box when an error occur.
 
@@ -18,6 +19,7 @@ mainProcess_label=Հիմնական գործընթացը
 
 # Variable: error message (in english)
 
+addons_stable=աղյուսակ
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -25,6 +27,8 @@ mainProcess_label=Հիմնական գործընթացը
 addons_install_button=տեղադրել
 addons_uninstall_button=ջնջել
 addons_status_installed=Տեղադրվեց
+addons_status_preparing=Նախապատրաստում
+addons_status_downloading=Բեռնվում է
 
 
 # Validation status
