--- a/hy-AM/dom/chrome/plugins.properties
+++ b/hy-AM/dom/chrome/plugins.properties
@@ -20,3 +20,4 @@ mimetype_label=MIME տեսակ
 description_label=Նկարագրություն
 suffixes_label=Սուֆիքս
 
+openH264_name=OpenH264 Video Codec, որը մատակարարում է Cisco Systems, Inc.-ը
