--- a/hy-AM/browser/chrome/browser/browser.properties
+++ b/hy-AM/browser/chrome/browser/browser.properties
@@ -74,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Նոր թեման տեղադրվեց:
 lwthemePostInstallNotification.undoButton=Հետ քայլ
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Թեմաների կառավարում…
 lwthemePostInstallNotification.manageButton.accesskey=Թ
 
@@ -119,6 +120,7 @@ crashedpluginsMessage.learnMore=Իմանալ Ավելին…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.dismiss=Ոչ, շնորհակալ եմ
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -441,7 +443,10 @@ webapps.install.accesskey = I
 webapps.requestInstall = Տեղակայե՞լ "%1$S"-ը (%2$S) կայքից։
 webapps.install.success = Տեղակայված ծրագրերը
 webapps.install.inprogress = Տեղադրվում է
+webapps.uninstall = Հեռացնել
+webapps.doNotUninstall = Չտեղակայել
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Ցանկանու՞մ եք տեղակայել "%1$S"-ը։
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S-ը այժմ Լիաէկրան է:
@@ -499,8 +504,12 @@ identity.loggedIn.signOut.accessKey = գ
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին:
 getUserMedia.shareMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր բարձրախոսին:
+getUserMedia.shareScreen.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին:
 getUserMedia.shareCameraAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին և բարձրախոսին:
+getUserMedia.shareScreenAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր բարձրախոսին:
 getUserMedia.noVideo.label = Չկա տեսապատկեր
+getUserMedia.noApplication.label = Չկա ծրագիր
+getUserMedia.noWindow.label = Նոր Պատուհան
 getUserMedia.noAudio.label = Չկա ձայն
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
