--- a/hy-AM/browser/chrome/browser/devtools/gcli.properties
+++ b/hy-AM/browser/chrome/browser/devtools/gcli.properties
@@ -146,6 +146,7 @@ helpManSynopsis=Համառոտագիր
 
 # LOCALIZATION NOTE: This message is displayed in the help page if the command
 # has no parameters.
+helpManNone=Ոչ մեկը
 
 # LOCALIZATION NOTE: This message is displayed in response to the 'help'
 # command when used without a filter, just above the list of known commands.
