--- a/hy-AM/browser/chrome/browser/devtools/storage.properties
+++ b/hy-AM/browser/chrome/browser/devtools/storage.properties
@@ -11,16 +11,20 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=ի
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=Կրիչ
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=Ոճի տեսուչ
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
@@ -42,6 +46,7 @@
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookie-ներ
+tree.labels.indexedDB=Indexed DB
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -49,6 +54,8 @@ tree.labels.cookies=Cookie-ներ
 table.headers.cookies.name=Անուն
 table.headers.cookies.path=Ճ-ը.
 table.headers.cookies.host=Տիրույթը
+table.headers.cookies.expires=Ժամկետը ավարտվում է՝
+table.headers.cookies.value=Արժեքը
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -58,10 +65,18 @@ table.headers.cookies.host=Տիրույթը
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=Բանալի
+table.headers.localStorage.value=Արժեքը
 
+table.headers.sessionStorage.name=Բանալի
+table.headers.sessionStorage.value=Արժեքը
 
+table.headers.indexedDB.name=Բանալի
+table.headers.indexedDB.value=Արժեքը
 table.headers.indexedDB.version=Տարբերակ
+table.headers.indexedDB.keyPath=Բանալի
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
