[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/debugger.properties
+++ b/si/browser/chrome/browser/devtools/debugger.properties
@@ -99,9 +99,21 @@ debuggerMenu.accesskey=D
 
 # LOCALIZATION NOTE (*Events): The text to display in the events tab for
 # each group of sub-level event entries.
+animationEvents=සජීවනය
 audioEvents=ශ්‍රව්‍ය
-deviceEvents=උපාංග
+batteryEvents=බැටරිය
+clipboardEvents=පසුරු පුවරුව
+compositionEvents=සනඟයෝගය
+deviceEvents=මෙවලම
+displayEvents=තිරය
+dragAndDropEvents=ඇද හෙළන්න
+indexedDBEvents=IndexedDB
+interactionEvents=අන්තර්ක්‍රියාව
+keyboardEvents=යතුරුපුවරුව
+mouseEvents=මවුසය
 storageEvents=ගබඩාව
+touchEvents=අල්ලන්න
+otherEvents=වෙනත්
 
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle black boxing its associated
@@ -113,6 +125,7 @@ noMatchingStringsText=No matches found
 
 # LOCALIZATION NOTE (emptySearchText): This is the text that appears in the
 # filter text box when it is empty and the scripts container is selected.
+emptySearchText=ස්කරිප්ට සොයන්න (%S)
 
 # LOCALIZATION NOTE (emptyChromeGlobalsFilterText): This is the text that
 # appears in the filter text box when it is empty and the chrome globals
@@ -129,6 +142,7 @@ noMatchingStringsText=No matches found
 
 # LOCALIZATION NOTE (searchPanelGlobal): This is the text that appears in the
 # filter panel popup for the global search operation.
+searchPanelGlobal=සියළු ගොනු වල සොයන්න (%S)
 
 # LOCALIZATION NOTE (searchPanelFunction): This is the text that appears in the
 # filter panel popup for the function search operation.
@@ -144,6 +158,9 @@ noMatchingStringsText=No matches found
 
 # LOCALIZATION NOTE (breakpointMenuItem): The text for all the elements that
 # are displayed in the breakpoints menu item popup.
+breakpointMenuItem.enableOthers=අනිත්වා සකරිය කරන්න
+breakpointMenuItem.disableOthers=අනිත්වා අකරිය කරන්න
+breakpointMenuItem.deleteOthers=අනිත්වා ඉවත් කරන්න
 
 # LOCALIZATION NOTE (loadingText): The text that is displayed in the script
 # editor when the loading process has started but there is no file to display
@@ -152,6 +169,7 @@ loadingText=Loading…
 
 # LOCALIZATION NOTE (errorLoadingText): The text that is displayed in the debugger
 # viewer when there is an error loading a file
+errorLoadingText=මූලය පරවේශණය කිරීමේ දෝසහය:\n
 
 # LOCALIZATION NOTE (addWatchExpressionText): The text that is displayed in the
 # watch expressions list to add a new item.
@@ -189,15 +207,19 @@ globalScopeLabel=Global
 
 # LOCALIZATION NOTE (variablesEditableNameTooltip): The text that is displayed
 # in the variables list on an item with an editable name.
+variablesEditableNameTooltip=වෙනස් කිරීමට දෙවරක් ක්ලික් කරන්න
 
 # LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
 # in the variables list on an item with an editable value.
+variablesEditableValueTooltip=අගය වෙනස් කිරීමට ක්ලික් කරන්න
 
 # LOCALIZATION NOTE (variablesCloseButtonTooltip): The text that is displayed
 # in the variables list on an item which can be removed.
+variablesCloseButtonTooltip=ඉවත් කිරීමට ක්ලික් කරන්න
 
 # LOCALIZATION NOTE (variablesEditButtonTooltip): The text that is displayed
 # in the variables list on a getter or setter which can be edited.
+variablesEditButtonTooltip=අගය සැකසීමට ක්ලික් කරන්න
 
 # LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
 # in a tooltip on the "open in inspector" button in the the variables list for a
@@ -217,10 +239,12 @@ globalScopeLabel=Global
 
 # LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
 # in the watch expressions list as a separator between the code and evaluation.
+watchExpressionsSeparatorLabel=\u0020→
 
 # LOCALIZATION NOTE (functionSearchSeparatorLabel): The text that is displayed
 # in the functions search panel as a separator between function's inferred name
 # and its real name (if available).
+functionSearchSeparatorLabel=←
 
 # LOCALIZATION NOTE (resumptionOrderPanelTitle): This is the text that appears
 # as a description in the notification panel popup, when multiple debuggers are
