--- a/si/browser/chrome/browser/devtools/gclicommands.properties
+++ b/si/browser/chrome/browser/devtools/gclicommands.properties
@@ -71,6 +71,7 @@ screenshotFilenameManual=The name of the file (should have a '.png' extension) t
 
 # LOCALIZATION NOTE (screenshotGroupOptions) A label for the optional options of
 # the screenshot command.
+screenshotGroupOptions=විකල්ප
 
 # LOCALIZATION NOTE (screenshotDelayDesc) A very short string to describe
 # the 'delay' parameter to the 'screenshot' command, which is displayed in
@@ -133,6 +134,7 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 
 # LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
 # the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=විකල්ප
 
 # LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
 # the 'hideguides' option parameter to the 'highlight' command, which is
@@ -153,6 +155,7 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 # LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
 # the 'showall' option parameter to the 'highlight' command, which is
 # displayed in a dialog when the user is using this command.
+highlightShowAllDesc=සියළු ගැළපීම් පෙන්වන්න
 
 # LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
 # 'showall' option parameter to the 'highlight' command, displayed when the
@@ -205,6 +208,7 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
 # The argument (%1$S) is the browser name.
+restartBrowserDesc=%1$S යළි අරඹන්න
 
 # LOCALIZATION NOTE (restartBrowserNocacheDesc) A very short string to
 # describe the 'nocache' parameter to the 'restart' command, which is
@@ -216,6 +220,7 @@ screenshotFullPageManual=True if the screenshot should also include parts of the
 # LOCALIZATION NOTE (restartBrowserRestarting) A string displayed to the
 # user when a restart has been initiated without a delay.
 # The argument (%1$S) is the browser name.
+restartBrowserRestarting=%1$S යළි ආරම්ඹ කරමින්...
 
 # LOCALIZATION NOTE (inspectDesc) A very short description of the 'inspect'
 # command. See inspectManual for a fuller description of what it does. This
@@ -403,6 +408,7 @@ breaklistNone=බෙදුම් ලක්ෂ සකසා නැත
 
 # LOCALIZATION NOTE (breaklistOutRemove) A title used in the output from the
 # 'break list' command on a button which can be used to remove breakpoints
+breaklistOutRemove=ඉවත් කරන්න
 
 # LOCALIZATION NOTE (breakaddAdded) Used in the output of the 'break add'
 # command to explain that a breakpoint was added.
@@ -556,14 +562,17 @@ editLineToJumpToDesc=යා යුතු පෙළ
 # LOCALIZATION NOTE (resizePageDesc) A very short string to describe the
 # 'resizepage' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
+resizePageDesc=පිටුව නැවත පරමාණනය කරන්න
 
 # LOCALIZATION NOTE (resizePageArgWidthDesc) A very short string to describe the
 # 'width' parameter to the 'resizepage' command, which is displayed in a dialog
 # when the user is using this command.
+resizePageArgWidthDesc=පළල පික්සල වලින්
 
 # LOCALIZATION NOTE (resizePageArgWidthDesc) A very short string to describe the
 # 'height' parameter to the 'resizepage' command, which is displayed in a dialog
 # when the user is using this command.
+resizePageArgHeightDesc=උස් පික්සල වලින්
 
 # LOCALIZATION NOTE (resizeModeOnDesc) A very short string to describe the
 # 'resizeon ' command. This string is designed to be shown in a menu
@@ -583,6 +592,7 @@ editLineToJumpToDesc=යා යුතු පෙළ
 # LOCALIZATION NOTE (resizeModeToDesc) A very short string to describe the
 # 'resize to' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
+resizeModeToDesc=පිටුවේ පරමාණය වෙනස් කරන්න
 
 # LOCALIZATION NOTE (resizeModeDesc) A very short string to describe the
 # 'resize' command. This string is designed to be shown in a menu
@@ -602,6 +612,7 @@ editLineToJumpToDesc=යා යුතු පෙළ
 
 # LOCALIZATION NOTE (cmdStatus3) When the we load new commands from mozcmd
 # directory, we report where we loaded from using %1$S.
+cmdStatus3='%1$S' මඟින් පූරණය කල විදහාන
 
 # LOCALIZATION NOTE (cmdSetdirDesc)  A very short description of the 'cmd setdir'
 # command. This string is designed to be shown in a menu alongside the command
@@ -629,6 +640,11 @@ editLineToJumpToDesc=යා යුතු පෙළ
 # addonListLocaleHeading, addonListPluginHeading, addonListThemeHeading,
 # addonListUnknownHeading) Used in the output of the 'addon list' command as the
 # first line of output.
+addonListDictionaryHeading=පහත ශබ්දහ කෝසහ දැනටමත් ස්තහාපනය කර ඇත:
+addonListExtensionHeading=පහත දිගු දැනටමත් ස්තහාපනය කර ඇත:
+addonListPluginHeading=පහත ප්ලගින දැනටමත් ස්තහාපනය කර ඇත:
+addonListThemeHeading=පහත තේමා දැනටමත් ස්තහාපනය කර ඇත:
+addonListAllHeading=පහත ඇඩෝන දැනටමත් ස්තහාපනය කර ඇත:
 
 # LOCALIZATION NOTE (addonListOutEnable, addonListOutDisable) Used in the
 # output of the 'addon list' command as the labels for the enable/disable
@@ -636,6 +652,7 @@ editLineToJumpToDesc=යා යුතු පෙළ
 # small action button next to the addon name, which is why it should be as
 # short as possible.
 addonListOutEnable=සක්‍රීය
+addonListOutDisable=අක්‍රීය කරන්න
 
 # LOCALIZATION NOTE (addonPending, addonPendingEnable, addonPendingDisable,
 # addonPendingUninstall, addonPendingInstall, addonPendingUpgrade) Used in
@@ -644,14 +661,19 @@ addonListOutEnable=සක්‍රීය
 # actions (named by the other lookup variables). These strings are designed
 # to be shown alongside addon names, which is why they should be as short
 # as possible.
+addonPendingDisable=අක්‍රීය කරන්න
+addonPendingUninstall=අස්ථාපනය කරන්න
+addonPendingInstall=ස්ථාපනය කරන්න
 
 # LOCALIZATION NOTE (addonNameDesc) A very short description of the
 # name parameter of numerous add-on commands. This string is designed to be shown
 # in a menu alongside the command name, which is why it should be as short as
 # possible.
+addonNameDesc=අඩෝනයේ නම්
 
 # LOCALIZATION NOTE (addonNoneOfType) Used in the output of the 'addon list'
 # command when a search for add-ons of a particular type were not found.
+addonNoneOfType=එම වර්ගයේ ස්තහාපනය කල ඇඩෝන නැත.
 
 # LOCALIZATION NOTE (addonEnableDesc) A very short description of the
 # 'addon enable <type>' command. This string is designed to be shown in a menu
@@ -660,9 +682,11 @@ addonListOutEnable=සක්‍රීය
 # LOCALIZATION NOTE (addonAlreadyEnabled) Used in the output of the
 # 'addon enable' command when an attempt is made to enable an add-on that is
 # already enabled.
+addonAlreadyEnabled=%S දැනටමත් සකරිය කර ඇත.
 
 # LOCALIZATION NOTE (addonEnabled) Used in the output of the 'addon enable'
 # command when an add-on is enabled.
+addonEnabled=%S සකරියයි.
 
 # LOCALIZATION NOTE (addonDisableDesc) A very short description of the
 # 'addon disable <type>' command. This string is designed to be shown in a menu
@@ -836,6 +860,7 @@ addonListOutEnable=සක්‍රීය
 # Particular care should be taken in translating these strings as they have
 # references to names in the cookies spec.
 cookieListOutHost=ධාරකය:
+cookieListOutAttributes=උප ලක්ෂණ
 
 # LOCALIZATION NOTE (cookieListOutNone) The output of the 'cookie list' command
 # uses this string when no cookie attributes (like httpOnly, secure, etc) apply
@@ -858,6 +883,7 @@ cookieListOutEdit=සැකසුම්
 
 # LOCALIZATION NOTE (cookieListOutRemove) A title used in the output from the
 # 'cookie list' command on a button which can be used to remove cookies
+cookieListOutRemove=ඉවත් කරන්න
 
 # LOCALIZATION NOTE (cookieRemoveDesc) A very short description of the
 # 'cookie remove' command. This string is designed to be shown in a menu
