--- a/si/browser/chrome/browser/webrtcIndicator.properties
+++ b/si/browser/chrome/browser/webrtcIndicator.properties
@@ -7,7 +7,14 @@
 # LOCALIZATION NOTE (webrtcIndicator.windowtitle): %S is the brand name (e.g. Firefox).
 # This string is used so that the window has a title in tools that enumerate/look for window
 # titles. It is not normally visible anywhere.
+webrtcIndicator.windowtitle = %S - බෙදාගැනීම් දර්ශකය
 
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = ඔබේ කැමරාව හා මයික්‍රෆෝනය බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
+webrtcIndicator.sharingCamera.tooltip              = ඔබේ කැමරාව බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
+webrtcIndicator.sharingMicrophone.tooltip          = ඔබේ මයික්‍රෆෝනය බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
+webrtcIndicator.sharingApplication.tooltip = ඔබේ යෙදුම බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
+webrtcIndicator.sharingScreen.tooltip = ඔබේ තිරය බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
+webrtcIndicator.sharingWindow.tooltip = ඔබේ කවුළුව බෙදාගැනේ. බෙදාගැනීම පාලනයට ක්ලික් කරන්න.
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
@@ -15,20 +22,32 @@
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.sharingCameraWith.menuitem = "%S" සමඟ කැමරාව බෙදාගන්න
+webrtcIndicator.sharingMicrophoneWith.menuitem = "%S" සමඟ මයික්‍රෆෝනය බෙදාගන්න
+webrtcIndicator.sharingApplicationWith.menuitem = යෙදුම "%S" සමඟ බෙදාගනිමින්
+webrtcIndicator.sharingScreenWith.menuitem = තිරය "%S" සමඟ බෙදාගනිමින්
+webrtcIndicator.sharingWindowWith.menuitem = කවුළුව "%S" සමඟ බෙදාගනිමින්
+webrtcIndicator.controlSharing.menuitem = පාලක බෙදාගැනීම
 # LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingCameraWithNTabs.menuitem = #1 ටැබය සමඟ කැමරාව බෙදාගනිමින්;#1 ටැබ සමඟ කැමරාව බෙදාගනිමින්
 # LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = #1 ටැබය සමඟ මයික්‍රෆෝනය බෙදාගනිමින්;#1 ටැබ සමඟ මයික්‍රෆෝනය බෙදාගනිමින්
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = #1 ටැබය සමඟ යෙදුම බෙදාගනිමින්;#1 ටැබ සමඟ යෙදුම බෙදාගනිමින්
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingScreenWithNTabs.menuitem = #1 ටැබය සමඟ තිරය බෙදාගනිමින්;#1 ටැබ සමඟ තිරය බෙදාගනිමින්
 # LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingWindowWithNTabs.menuitem = #1 ටැබය සමඟ කවුළුව බෙදාගනිමින්;#1 ටැබ සමඟ කවුළු බෙදාගනිමින්
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.controlSharingOn.menuitem = "%S" මත බෙදාගැනීම පාලනය
